--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
- 
+
     <main>
-      <div class="container">
+      <div class="container snackbar-container">
         <a class="back-link" href="./index.html">Go back</a>
         <form class="form">
         <label>
